package dev.parthenodevs.bugboard.backend.exception;

public class UnauthorizedException extends RuntimeException
{
    public UnauthorizedException(String message) {
        super(message);
    }
}
